--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div  class="main-head">
             
             </div>
-        <!-- <div class="background-interior"> 
+        <div class="background-interior"> 
             
-        </div>-->
+        </div>
     </div>
 </body>
 </html>
