--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div id="main" class="main-container">
-        <div class="overlay-image"></div>
+
         <div  class="main-head">
             <ul class="head-list">
                 <li class="logo">
@@ -186,8 +186,8 @@
                     Пт-сб 12:00 – 23:00</p>
                     <p>Україна, Київ, <br>
                         вул.Січових Стрільців, 20</p>
-                    <p>hello@alaskakyiv.com</p>
-                    <p>hello@alaskakyiv.com</p>
+                    <p>hello@claudekyiv.com</p>
+                    <p>hello@claudekyiv.com</p>
                 </div>
                 <div class="column_4">
                     <h2>Бронювання столиків</h2>
@@ -204,7 +204,7 @@
                     <a href="#main">Головна</a>
                 </li>
                 <li>
-                    <a href="">Про Нас</a>
+                    <a href="about.html">Про Нас</a>
                 </li>
                  
             </ul>
