pre-last noadapt

--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
                 </li>
                 <li class="order">
                     <div class="order-box">
-                        <a href="data">Забронювати столик</a> 
+                        <a href="form.html">Забронювати столик</a> 
                     </div>
                 </li>
             </ul>
             
         </div>
+
+        
 
         <div class="team">
 
