--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             </li>
             <li class="order">
                 <div class="order-box">
-                    <a href="data">Забронювати столик</a>
+                    <a href="form.html">Забронювати столик</a>
                 </div>
             </li>
         </ul>
