--- a/about.html
+++ b/about.html
@@ -22,16 +22,17 @@
 <body>
 <div id="top"  class="about-container">
     <div class="main-head">
-        <ul class="head-list">
-            <li class="logo">
+        <div class="head-list">
+            <div></div>
+            <div class="logo">
                 <p>Claude Monet</p>
-            </li>
-            <li class="order">
+            </div>
+            <div class="order">
                 <div class="order-box">
                     <a href="form.html">Забронювати столик</a>
                 </div>
-            </li>
-        </ul>
+            </div>
+        </div>
     </div>
     
     <div class="about-sec">
