--- a/form.html
+++ b/form.html
@@ -29,11 +29,12 @@
 <body>
     <div class="form-main-container">
         <div class="main-head">
-            <ul class="head-list">
-                <li class="logo">
+            <div class="head-list">
+                <div></div>
+                <div class="logo">
                     <p>Claude Monet</p>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
         <div class="form-box">
                 <form>
