--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         rel="stylesheet">
     
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <style>
        .main-container{
         background-image: url(img/background.jpg);
@@ -36,16 +37,17 @@
     <div id="main" class="main-container">
 
         <div  class="main-head">
-            <ul class="head-list">
-                <li class="logo">
+            <div class="head-list">
+                <div></div>
+                <div class="logo">
                     <p>Claude Monet</p>
-                </li>
-                <li class="order">
+                </div>
+                <div class="order">
                     <div class="order-box">
                         <a href="form.html">Забронювати столик</a> 
                     </div>
-                </li>
-            </ul>
+                </div>
+            </div>
             
         </div>
 
